Implemented GET/POST & update swagger to openapi 3
