# devices/openapi.yaml
@@ -1,15 +1,9 @@
-swagger: '2.0'
+openapi: 3.0.0
+servers:
+  - url: http://localhost:5000/
 info:
-  title: Mixtli IoT
-  version: "0.1"
-  description: API to store Iot devices information
-consumes:
-  - application/json
-produces:
-  - application/json
-# Security Missing
-basePath: /api
-
+  title: Mixtli Iot devices API
+  version: '0.0.1'
 paths:
   /devices:
     get:
@@ -18,111 +12,137 @@ paths:
       responses:
         200:
           description: Returns devices
-          schema:
-            type: object
-            properties:
-              devices:
-                type: array
-                items:
-                  $ref: '#/definitions/Devices'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  devices:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Devices'
   /devices/{device_id}:
     get:
       operationId: views.get_device
       summary: Get single device by id
       parameters:
-        - $ref: '#/parameters/device_id'
+        - $ref: '#/components/parameters/device_id'
       responses:
         200:
           description: Returns requested device
-          schema:
-            $ref: '#/definitions/Devices'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Devices'
         404:
           description: Device not found
+  /devices/:
+    post:
+      operationId: views.post_device
+      summary: Add new device
+      responses:
+        204:
+          description: Device added successfully
+      requestBody:
+        content:
+          application/json:
+            schema:
+              x-body-name: device
+              $ref: '#/components/schemas/Devices'
 
-parameters:
-  device_id:
-    name: device_id
-    description: Device Unique Id
-    in: path
-    required: true
-    type: integer
-
-definitions:
-  Devices:
-    type: object
-    required:
-      - name
-      - serial_number
-      - mac
-    properties:
-      id:
+components:
+  parameters:
+    device_id:
+      name: device_id
+      description: Device Unique Id
+      in: path
+      required: true
+      schema:
         type: integer
-        description: Unique identifier
-        example: 1
-        readOnly: true
-      name:
-        type: string
-        description: Device Name
-        example: Sensor oxygeno
-        minLength: 1
-        maxLength: 50
-      location:
-        type: string
-        description: Device location
-        example: Building A7
-        minLength: 1
-        maxLength: 300
-      device_status:
-        type: integer
-        description: Device current status, offline=0, online=1, sleep=2
-        example: 0
-      hardware_version:
-        type: string
-        description: Current hardware version
-        minLength: 1
-        maxLength: 50
-        example: 0.0.1
-      software_version:
-        type: string
-        description: Current software version
-        minLength: 1
-        maxLength: 50
-        example: 0.0.1-dev
-      manufacturer:
-        type: string
-        description: Device manufacturer
-        minLength: 1
-        maxLength: 50
-        example: ncr-inc
-      serial_number:
-        type: string
-        description: Unique device serial number
-        minLength: 1
-        maxLength: 100
-        example: Y0139836
-      mac:
-        type: string
-        minLength: 1
-        maxLength: 50
-        example: 00:25:96:FF:FE:12:34:56
-        description: Device mac address
-      last_connection:
-        type: string
-        format: date-time
-        description: Last time device was seen
-      created:
-        type: string
-        format: date-time
-        description: Date & time (UTC) the device was added to DB
-        readOnly: true
-      updated:
-        type: string
-        format: date-time
-        description: Date & time (UTC) device was added to DB
-        readOnly: true
-      meta_data:
-        type: string
-        description: JSON data
+        pattern: '^[0-9]+$'
+  schemas:
+    Devices:
+      type: object
+      required:
+        - name
+        - serial_number
+        - mac
+      properties:
+        id:
+          type: integer
+          description: Unique identifier
+          example: 1
+          readOnly: true
+        name:
+          type: string
+          description: Device Name
+          example: Sensor oxygeno
+          minLength: 1
+          maxLength: 50
+        description:
+          type: string
+          description: Device details
+          example: This devices monitors the computer's temperature
+          minLength: 0
+          maxLength: 300
+        location:
+          type: string
+          description: Device location
+          example: Building A7
+          minLength: 1
+          maxLength: 300
+        device_status:
+          type: integer
+          description: Device current status, offline=0, online=1, sleep=2
+          example: 0
+        hardware_version:
+          type: string
+          description: Current hardware version
+          minLength: 1
+          maxLength: 50
+          example: 0.0.1
+        software_version:
+          type: string
+          description: Current software version
+          minLength: 1
+          maxLength: 50
+          example: 0.0.1-dev
+        manufacturer:
+          type: string
+          description: Device manufacturer
+          minLength: 1
+          maxLength: 50
+          example: ncr-inc
+        serial_number:
+          type: string
+          description: Unique device serial number
+          minLength: 1
+          maxLength: 100
+          example: Y0139836
+        mac:
+          type: string
+          minLength: 1
+          maxLength: 50
+          example: 00:25:96:FF:FE:12:34:56
+          description: Device mac address
+        last_connection:
+          type: string
+          format: date-time
+          description: Last time device was seen
+          readOnly: true
+        created:
+          type: string
+          format: date-time
+          description: Date & time (UTC) the device was added to DB
+          readOnly: true
+        updated:
+          type: string
+          format: date-time
+          description: Date & time (UTC) device information was updated
+          readOnly: true
+        meta_data:
+          type: string
+          description: JSON data
 
 
-        
+
